--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   box-sizing: border-box;
 }
+
 body {
   margin: 0%;
   height: 100vh;
@@ -15,6 +16,7 @@ button {
   right: 100px;
   top: 20px;
 }
+
 .modal-popup {
   background-color: rgba(128, 123, 123, 0.493);
   height: 100vh;
@@ -33,11 +35,13 @@ button {
   transform: translate(-50%, -50%);
   transition: 0.5s ease-in-out;
 }
+
 .modal-close {
   float: right;
   padding: 10px;
   cursor: pointer;
 }
+
 .kakao-login {
   width: 100%;
   padding: 5px 0;
@@ -45,20 +49,28 @@ button {
   text-align: center;
   margin-bottom: 10px;
 }
+
 .left,
 .right {
-  width: 150px;
+  width: 45%;
   height: 1px;
-  color: rgb(233, 236, 239);
+  background-color: rgb(198, 198, 199);
 }
 
 .horizon-bar {
   text-align: center;
   margin: 0%;
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.horizon-bar > p {
+  margin: 0 10px;
+}
+
 .modal h2 {
-  margin: 10px;
+  margin: 30px;
   text-align: center;
 }
 
@@ -99,6 +111,7 @@ form > label {
   font-size: 14px;
   margin-top: 10px;
 }
+
 .btn-join {
   margin-top: 20px;
   font-size: 14px;
@@ -120,4 +133,5 @@ form > p,
   cursor: pointer;
   margin: 20px 0;
   font-size: 14px;
+  text-align: center;
 }
