--- a/style.css
+++ b/style.css
@@ -4,39 +4,52 @@
 
 body {
   margin: 0%;
-  height: 100vh;
+  height: 200vh;
 }
 
 .hidden {
   display: none;
 }
 
-button {
+#btnProfile {
   position: absolute;
-  right: 100px;
+  left: 100px;
+  top: 20px;
+  width: 200px;
+}
+
+#btnAlert {
+  position: absolute;
+  left: 320px;
   top: 20px;
 }
 
-.modal-popup {
+.modal-popup,
+.alert-popup {
   background-color: rgba(128, 123, 123, 0.493);
-  height: 100vh;
+  height: 100%;
   padding-top: 10px;
   position: relative;
 }
 
-.modal {
+.modal,
+.alert-modal {
   background-color: white;
   width: 400px;
   height: auto;
-  min-height: 500px;
-  position: absolute;
+  min-height: 480px;
+
+  position: sticky;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  transition: 0.5s ease-in-out;
+
+  border-radius: 10px;
+  box-shadow: 0 1px 10px black;
 }
 
-.modal-close {
+.modal-close,
+.alert-close {
   float: right;
   padding: 10px;
   cursor: pointer;
@@ -70,7 +83,7 @@ button {
 }
 
 .modal h2 {
-  margin: 30px;
+  padding: 30px 0 20px 0;
   text-align: center;
 }
 
@@ -132,6 +145,18 @@ form > p,
 .btn-alreadyJoin {
   cursor: pointer;
   margin: 20px 0;
+  padding-bottom: 20px;
   font-size: 14px;
   text-align: center;
+}
+
+.title > h2 {
+  padding: 30px 0 0 30px;
+  text-align: center;
+  margin: 0%;
+}
+
+.alert-popup p {
+  text-align: center;
+  margin: 30px;
 }
